--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <h5>Login</h5>
 <div class="row">
-  <form materialize class="col s12" [formGroup]="form" (ngSubmit)="loginUser()">
+  <form class="col s12" [formGroup]="form" (ngSubmit)="loginUser()">
     <div class="row">
       <div class="input-field col s12">
         <input id="userName" type="text" class="validate"
