--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (submit)="gotoWeek()">
-<table width="50%">
+<table width="100%">
   <tr>
     <td width="50%">Displaying {{ expenses.length }} expenses for week beginning {{thisWeek}}.</td>
     <td width="15%"><a [routerLink]="['/', previousWeek]"><i class="material-icons">navigate_before</i>Prev</a></td>
@@ -15,20 +15,20 @@
 </table>
 </form>
 
-<table>
+<table width="100%">
   <tr>
-    <td style="vertical-align:top">
+    <td style="vertical-align:top" width="40%">
       <b>Incomes</b>
-      <table>
+      <table width="100%">
         <thead>
         <tr>
           <th data-field="name">Name</th>
           <th data-field="name">Amount</th>
           <th data-field="name">Due Date</th>
           <th data-field="name">Notes</th>
-          <th data-field="name">View Doc</th>
-          <th data-field="name">Edit</th>
-          <th data-field="name">Delete</th>
+          <th data-field="name">View</th>
+          <th data-field="name"></th>
+          <th data-field="name"></th>
         </tr>
         </thead>
 
@@ -72,19 +72,19 @@
         </tfoot>
       </table>
     </td>    
-    <td style="vertical-align:top">
+    <td style="vertical-align:top" width="60%">
       <b>Expenses</b>
-      <table>
+      <table width="100%">
         <thead>
         <tr>
-          <th data-field="name">Name</th>
-          <th data-field="name">Amount</th>
-          <th data-field="name">Due Date</th>
-          <th data-field="name">Paid</th>
-          <th data-field="name">Notes</th>
-          <th data-field="name">View Doc</th>
-          <th data-field="name">Edit</th>
-          <th data-field="name">Delete</th>
+          <th data-field="name" wisth="30%">Name</th>
+          <th data-field="name" wisth="10%">Amount</th>
+          <th data-field="name" wisth="10%">Due Date</th>
+          <th data-field="name" wisth="5%">Paid</th>
+          <th data-field="name" wisth="30%">Notes</th>
+          <th data-field="name" wisth="5%">View</th>
+          <th data-field="name" width="5%"></th>
+          <th data-field="name" wisth="5%"></th>
         </tr>
         </thead>
 
@@ -93,17 +93,17 @@
             <td>{{ expense.transactionType.description }}</td>
             <td>{{ expense.amount }}</td>
             <td>{{ expense.dueDateString }}</td>
-            <td><a *ngIf="!expense.paid" (click)="payExpense(expense.id)" class="pointer">
-                  <i class="material-icons">ic_check_box_outline_blank</i>
+            <td><a *ngIf="!expense.paid" (click)="payExpense(expense)" class="pointer">
+                  <i class="material-icons">check_box_outline_blank</i>
                 </a>
-                <a *ngIf="expense.paid" (click)="unPayExpense(expense.id)" class="pointer">
-                  <i class="material-icons">ic_check_box</i>
+                <a *ngIf="expense.paid" (click)="unPayExpense(expense)" class="pointer">
+                  <i class="material-icons">check_box</i>
                 </a>
                 </td>
             <td>{{ expense.notes }}</td>
             <td>
                 <a *ngIf="expense.documentationFilePath" (click)="viewDocumentation(expense.id, 'expenses')" class="pointer">
-                  <i class="material-icons">ic_open_in_browser</i>
+                  <i class="material-icons">open_in_browser</i>
                 </a>
             </td>
             <td>
