add metadata json field

--- a/src/app/donations/donation-form/donation-form.component.html
+++ b/src/app/donations/donation-form/donation-form.component.html
@@ -93,6 +93,23 @@
       <tr>
         <td>
           <div class="input-field col s12">
+            <textarea [(ngModel)]="donation.metaDataChunk" formControlName="metaDataChunk">
+            </textarea>
+            <label for="metaDataChunk"
+                   [class.active]="donation.metaDataChunk">
+              Metadata
+            </label>
+          </div>
+        </td>
+        <td>
+          <div class="input-field col s12">
+
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="input-field col s12">
             <table width="100%">
               <tr>
                 <td width="20%"><input type="file" (change)="fileChange($event)" placeholder="Upload File" accept=".pdf,.doc,.docx"></td>
