--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <form class="col s12" [formGroup]="form" (ngSubmit)="search()">
-    <table cellspacing="0" cellpadding="0" width="80%">
+    <table class="col s12" cellspacing="0" cellpadding="0">
       <tr>
         <td>
-          <div class="input-field col s12">
+          <div class="input-field col s4">
             <md-input-container floatPlaceholder="never">
-              <input mdInput [mdAutocomplete]="reactiveAuto" [formControl]="stateCtrl" [(ngModel)]="expenseType" formControlName="expenseType"
+              <input mdInput [mdAutocomplete]="reactiveAuto" [formControl]="stateCtrl" [(ngModel)]="expense.transactionType" formControlName="expenseType"
               size="30" [class.invalid]="expenseTypeInvalid()" (blur)="expenseTypeTouched = true">
               <label for="expenseType"
-                   [class.active]="expenseType">
+                  [class.active]="expense.transactionType">
               Expense Type
             </label>
             <div *ngIf="expenseTypeInvalid()" style="color: red">Please select a value</div>
@@ -21,10 +21,52 @@
             </md-autocomplete>
           </div>
         </td>
+      </tr>
+      <tr>
         <td>
           <div class="input-field col s12">
+            <textarea [(ngModel)]="expense.metaDataChunk" formControlName="metaDataChunk">
+            </textarea>
+            <label for="metaDataChunk"
+                   [class.active]="expense.metaDataChunk">
+              Metadata
+            </label>
           </div>
-        </td>        
+        </td>
+        <td>
+          <div class="input-field col s12">
+
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="input-field col s4">
+            <md-input-container>
+              <input mdInput [mdDatepicker]="startDatePicker" [(ngModel)]="expense.startDateString" formControlName="startDateString">
+              <button mdSuffix [mdDatepickerToggle]="startDatePicker"></button>
+            </md-input-container>
+            <md-datepicker #startDatePicker></md-datepicker>
+
+            <label for="startDateString"
+                  [class.active]="expense.startDateString"
+                  data-error="Start Date is required">
+              Start Date
+            </label>
+          </div>
+          <div class="input-field col s4">
+            <md-input-container>
+              <input mdInput [mdDatepicker]="endDatePicker" [(ngModel)]="expense.endDateString" formControlName="endDateString">
+              <button mdSuffix [mdDatepickerToggle]="endDatePicker"></button>
+            </md-input-container>
+            <md-datepicker #endDatePicker></md-datepicker>
+
+            <label for="endDateString"
+                  [class.active]="expense.endDateString">
+              End Date
+            </label>
+          </div>
+        </td>
       </tr>
     </table>
     <p></p>
@@ -34,18 +76,17 @@
     </button>
   </form>
 </div>
-
-<table width="100%">
+<table width="50%">
   <thead>
   <tr>
-    <th data-field="name" wisth="30%">Name</th>
-    <th data-field="name" wisth="10%">Amount</th>
-    <th data-field="name" wisth="10%">Due Date</th>
-    <th data-field="name" wisth="5%">Paid</th>
-    <th data-field="name" wisth="30%">Notes</th>
-    <th data-field="name" wisth="5%">View</th>
+    <th data-field="name" width="30%">Name</th>
+    <th data-field="name" width="10%">Amount</th>
+    <th data-field="name" width="10%">Due Date</th>
+    <th data-field="name" width="5%">Paid</th>
+    <th data-field="name" width="30%">Notes</th>
+    <th data-field="name" width="5%">View</th>
     <th data-field="name" width="5%"></th>
-    <th data-field="name" wisth="5%"></th>
+    <th data-field="name" width="5%"></th>
   </tr>
   </thead>
 
