--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -77,14 +77,14 @@
       <table width="100%">
         <thead>
         <tr>
-          <th data-field="name" wisth="30%">Name</th>
-          <th data-field="name" wisth="10%">Amount</th>
-          <th data-field="name" wisth="10%">Due Date</th>
-          <th data-field="name" wisth="5%">Paid</th>
-          <th data-field="name" wisth="30%">Notes</th>
-          <th data-field="name" wisth="5%">View</th>
+          <th data-field="name" width="30%">Name</th>
+          <th data-field="name" width="10%">Amount</th>
+          <th data-field="name" width="10%">Due Date</th>
+          <th data-field="name" width="5%">Paid</th>
+          <th data-field="name" width="30%">Notes</th>
+          <th data-field="name" width="5%">View</th>
           <th data-field="name" width="5%"></th>
-          <th data-field="name" wisth="5%"></th>
+          <th data-field="name" width="5%"></th>
         </tr>
         </thead>
 
@@ -93,13 +93,14 @@
             <td>{{ expense.transactionType.description }}</td>
             <td>{{ expense.amount }}</td>
             <td>{{ expense.dueDateString }}</td>
-            <td><a *ngIf="!expense.paid" (click)="payExpense(expense)" class="pointer">
+            <td>
+              <a *ngIf="!expense.paid" (click)="payExpense(expense)" class="pointer">
                   <i class="material-icons">check_box_outline_blank</i>
                 </a>
                 <a *ngIf="expense.paid" (click)="unPayExpense(expense)" class="pointer">
                   <i class="material-icons">check_box</i>
                 </a>
-                </td>
+            </td>
             <td>{{ expense.notes }}</td>
             <td>
                 <a *ngIf="expense.documentationFilePath" (click)="viewDocumentation(expense.id, 'expenses')" class="pointer">
@@ -164,7 +165,14 @@
                   <td>{{ expense.transactionType.description }}</td>
                   <td>{{ expense.amount }}</td>
                   <td>{{ expense.dueDateString }}</td>
-                  <td>{{ expense.paid ? "PAID" : "" }}</td>
+                  <td>
+                    <a *ngIf="!expense.paid" (click)="payExpense(expense)" class="pointer">
+                      <i class="material-icons">check_box_outline_blank</i>
+                    </a>
+                    <a *ngIf="expense.paid" (click)="unPayExpense(expense)" class="pointer">
+                      <i class="material-icons">check_box</i>
+                    </a>
+                  </td>
                   <td>{{ expense.notes }}</td>
                   <td>
                     <a [routerLink]="['/expenses', expense.id]">
