--- a/src/app/ref-data/ref-datas.component.html
+++ b/src/app/ref-data/ref-datas.component.html
@@ -2,6 +2,59 @@
   Displaying {{ refDatas.length }} refDatas
 </p>
 
+<div class="row">
+  <form class="col s12" [formGroup]="form" (ngSubmit)="search()">
+    <table class="col s12" cellspacing="0" cellpadding="0">
+      <tr>
+        <td>
+           <div class="input-field col s12">
+            <md-select placeholder="Type" [(ngModel)]="refData.type" formControlName="type" size="30">
+                <md-option *ngFor="let type of types" [value]="type.value">
+                  {{ type.viewValue }}
+                </md-option>
+          </md-select>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="input-field col s12">
+            <textarea [(ngModel)]="refData.metaDataChunk" formControlName="metaDataChunk">
+            </textarea>
+            <label for="metaDataChunk"
+                   [class.active]="refData.metaDataChunk">
+              Metadata
+            </label>
+          </div>
+        </td>
+        <td>
+          <div class="input-field col s12">
+
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="input-field col s12">
+            <input id="description" type="text" class="validate"
+                   [(ngModel)]="refData.description" formControlName="description"
+            >
+            <label for="description"
+                   [class.active]="refData.description">
+              Description
+            </label>
+          </div>
+        </td>
+      </tr>
+    </table>
+    <p></p>
+    <button class="btn waves-effect waves-light" type="submit"
+            [disabled]="validateForm()">
+      Submit<i class="material-icons right">send</i>
+    </button>
+  </form>
+</div>
+
 <table>
   <thead>
   <tr>
