--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -14,6 +14,9 @@
       <li><a routerLink="/donations/all" routerLinkActive="active">Donations</a></li>
     </ul>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a routerLink="/documents/all" routerLinkActive="active">Documents</a></li>
+    </ul>    
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a routerLink="/expenses/search" routerLinkActive="active">Search</a></li>
     </ul>
   </div>
