--- a/src/app/donations/donation-form/donation-form.component.html
+++ b/src/app/donations/donation-form/donation-form.component.html
@@ -112,8 +112,8 @@
           <div class="input-field col s12">
             <table width="100%">
               <tr>
-                <td width="20%"><input type="file" (change)="fileChange($event)" placeholder="Upload File" accept=".pdf,.doc,.docx"></td>
-                <td width="50%">{{uploading}}{{donation.documentationFilePath}} <button type="button" (click)="viewDocumentation()">View</button></td>
+                <td width="20%"><input type="file" (change)="fileChange($event)" placeholder="Upload File" accept=".pdf,.doc,.docx,.xls,.xlsx"></td>
+                <td width="50%">{{uploading}}{{donation.documentationFilePath}} <button type="button" (click)="viewDocumentation(donation.documentationFilePath)">View</button></td>
               </tr>
             </table>
           </div>
