--- a/src/app/ref-data/ref-datas.component.html
+++ b/src/app/ref-data/ref-datas.component.html
@@ -1,5 +1,5 @@
 <p>
-  Displaying {{ refDatas.length }} refDatas
+  Displaying {{ refDatas.length }} refDatas (results are limited to 20 records, refine search if you can't find what you are looking for)
 </p>
 
 <div class="row">
