--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -79,6 +79,7 @@
 <p>
   Displaying {{ expenses.length }} expenses (results are limited to 20 records, refine search if you can't find what you are looking for)
 </p>
+<chart [type]="type" [data]="data" [options]="options"></chart>
 <table width="50%">
   <thead>
   <tr>
